--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "register-service-worker": "^1.0.0",
     "request": "^2.88.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-plugin-pwa": "^3.1.0",
     "@vue/cli-service": "^3.0.5",
     "vue-template-compiler": "^2.5.17"
   },
