--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-plugin-pwa": "^3.1.0",
-    "@vue/cli-service": "^3.0.5",
+    "@vue/cli-service": ">=3.0.5",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
